// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render error common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="MuiFormControlLabel-root controlLabel"
        data-testid="common-switch"
      >
        <span
          class="MuiSwitch-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-155 MuiSwitch-switchBase MuiSwitch-colorSecondary error PrivateSwitchBase-checked-156 Mui-checked error"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-158 MuiSwitch-input"
                id=""
                type="checkbox"
                value=""
              />
              <span
                class="MuiSwitch-thumb"
              />
            </span>
          </span>
          <span
            class="MuiSwitch-track errorBar"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label error MuiTypography-body1"
        />
      </label>
      
    </div>
  </div>
</div>
`;

exports[`render primary common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="MuiFormControlLabel-root controlLabel"
        data-testid="common-switch"
      >
        <span
          class="MuiSwitch-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-19 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-22 MuiSwitch-input"
                id=""
                type="checkbox"
                value="test"
              />
              <span
                class="MuiSwitch-thumb"
              />
            </span>
          </span>
          <span
            class="MuiSwitch-track"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Primary
        </span>
      </label>
      <p
        class="MuiFormHelperText-root switchHelperText"
      >
        test switch
      </p>
    </div>
  </div>
</div>
`;
